2001-02-09 Michael Twomey <michael.twomey@ireland.sun.com>

	* One of Sun's linguists (thanks Gabrielle) has pruned out a lot 
	of the terms. She has also filled in definitions for a lot of the
	terms too.

2000-12-20 Michael Twomey <michael.twomey@ireland.sun.com>

	* Merged in the Gnome glossary 
	(gnome-docu/user-docs/glossary/glossary.sgml). I've just cut and 
	pasted the SGML from each glossary term.
	* Pruned out some terms. I've started pruning out terms which 
	probably shouldn't be in the glossary.

2000-12-07  Gregory Leblanc  <gleblanc@cu-portland.edu>

	* Added this directory to keep the glossary for GNOME Translations,
	and related files.  Please be sure to commit the UN-COMPRESSED
	version of the gnumeric spreadsheet, so that proper diffs can be
	maintained.