@@ -1,3 +1,13 @@
+2001-03-01  Simos Xenitellis  <simos@hellug.gr>
+
+	* xml-i18n-glossary-tool.pl: Added perl script
+	that extracts the terms of the GnomeGlossary.gnumeric
+	file into a .po file.
+
+	* README.glossary.tool: Added README.glossary.tool
+	that describes the xml-i18n-glossary-tool.pl
+	Perl script.
+
 2001-02-09 Michael Twomey <michael.twomey@ireland.sun.com>
 
 	* One of Sun's linguists (thanks Gabrielle) has pruned out a lot 
